[gd_scene load_steps=7 format=3 uid="uid://k2fdtjns17vi"]

[ext_resource type="Texture2D" uid="uid://b88r1ag5010re" path="res://Assets/Sprites/uvgdgj_win_screen.png" id="1_t81ah"]
[ext_resource type="AudioStream" uid="uid://dqrk11wfiaogx" path="res://Assets/Audio/ui hover sound.mp3" id="2_r566s"]
[ext_resource type="Script" path="res://Scenes/Main/win_screen.gd" id="2_w5wu4"]
[ext_resource type="Texture2D" uid="uid://bwp2pvhooskog" path="res://Assets/Sprites/uvgdgj_play_button.png" id="3_3b063"]
[ext_resource type="Texture2D" uid="uid://bo8qowxx2wdfg" path="res://Assets/Sprites/uvgdgj_play_button_pressed.png" id="4_a04v6"]

[sub_resource type="LabelSettings" id="LabelSettings_tekf1"]
font_size = 20
font_color = Color(0.866667, 0.211765, 0.211765, 1)

[node name="WinScreen" type="Sprite2D"]
position = Vector2(336, 189)
texture = ExtResource("1_t81ah")
script = ExtResource("2_w5wu4")

[node name="PlayButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = -306.0
offset_top = 59.0
offset_right = -192.0
offset_bottom = 99.0
scale = Vector2(2, 2)
action_mode = 0
texture_normal = ExtResource("3_3b063")
texture_hover = ExtResource("4_a04v6")

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_r566s")
volume_db = -5.0
bus = &"SFX"

[node name="TimeLabel" type="Label" parent="."]
offset_left = 86.0
offset_top = -126.0
offset_right = 126.0
offset_bottom = -81.0
text = "hi"
label_settings = SubResource("LabelSettings_tekf1")

[node name="DeathLabel" type="Label" parent="."]
offset_left = 86.0
offset_top = -80.0
offset_right = 126.0
offset_bottom = -35.0
text = "hi"
label_settings = SubResource("LabelSettings_tekf1")

[connection signal="button_down" from="PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
